updated from test site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Curt's calcYouLater</title>
   </head>
   <body>
+    <a href="projects.html">Projects</a>
     <div class="flex-container">
         <div class="flex-item-screen">
             <p id="display"></p>
@@ -70,7 +71,6 @@
 
 
 <script src="./source/app.js">
-
 </script>
   </body>
 </html>
